--- a/main.css
+++ b/main.css
@@ -7,6 +7,10 @@ h1{
     font-size:72px; 
     color: #ffff;   
     text-align: center;
-
-
+}
+h2{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size:72px; 
+    color: #ffff;   
+    text-align: center;
 }
