--- a/main.css
+++ b/main.css
@@ -14,3 +14,10 @@ h2{
     color: #ffff;   
     text-align: center;
 }
+#background{
+    max-width: 100%;
+    max-height: 25%;
+    width: auto;
+    height: auto;
+   
+}
