--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    background: #545454;
+    background-image: img/temp1.jpg;
 }
 
 h1{
@@ -7,6 +7,7 @@ h1{
     font-size:72px; 
     color: #ffff;   
     text-align: center;
+    border-bottom-width:0;
 }
 h2{
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
