--- a/main.css
+++ b/main.css
@@ -1,5 +1,7 @@
 body {
-    background-image: img/temp1.jpg;
+    background-image: "img/temp1.jpg";
+    background-position: top;
+    background-size:cover;
 }
 
 h1{
