--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ body {
     background-image: "img/temp1.jpg";
     background-position: top;
     background-size:cover;
+    color: aqua;
 }
 
 h1{
