--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 body {
-    background-image: "img/temp1.jpg";
+    background-image: url("img/temp1.jpg");
     background-position: top;
+    background-attachment: fixed;    
 }
 
 h1{
@@ -15,11 +16,4 @@ h2{
     font-size:72px; 
     color: #ffff;   
     text-align: center;
-}
-#background{
-    max-width: 100%;
-    max-height: 25%;
-    width: auto;
-    height: auto;
-   
 }
