--- a/main.css
+++ b/main.css
@@ -1,7 +1,9 @@
 body {
     background-image: url("img/temp1.jpg");
     background-position: top;
-    background-attachment: fixed;    
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: auto;
 }
 
 h1{
