--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@ body {
     background-position: top;
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: 100% auto;
+    background-size: 100% 10%;
 }
 
 h1{
