--- a/main.css
+++ b/main.css
@@ -11,12 +11,18 @@ h1{
     font-size:72px; 
     color: #ffff;   
     text-align: center;
-    border-bottom-width:thick;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 h2{
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size:72px; 
     color: #ffff;   
     text-align: center;
-    border-bottom-width:thick;
+}
+p{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size:72px; 
+    color: #ffff;   
+    text-align: center;
 }
