--- a/main.css
+++ b/main.css
@@ -11,6 +11,7 @@ h1{
     font-size:72px; 
     color: #ffff;   
     text-align: center;
+    display: none; 
 }
 h2{
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
