--- a/main.css
+++ b/main.css
@@ -11,7 +11,7 @@ h1{
     font-size:72px; 
     color: #ffff;   
     text-align: center;
-    display:contents; 
+    display:flex; 
 }
 h2{
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
