--- a/main.css
+++ b/main.css
@@ -11,7 +11,6 @@ h1{
     font-size:72px; 
     color: #ffff;   
     text-align: center;
-    border: 0px;
 }
 h2{
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; 
@@ -40,6 +39,7 @@ p{
     top: 35%;
     width: 10%;
     height:auto;
-    left: 20%;
+    transform-origin: left, 40%;
+    
 
 }
