--- a/main.css
+++ b/main.css
@@ -27,13 +27,13 @@ p{
 #initial{
     position: absolute;
     top: 25%;
-    margin: 0 auto;
+    text-align: center;
 }
 
 #explanation{
     position: absolute;
     top: 75%; 
-    margin: 50%;
+    text-align: center;
 }
 
 #logo{
