--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@ body {
 
 h1{
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size:100px; 
+    font-size: 550%; 
     color: #ffff;   
     text-align: center;
 }
@@ -18,7 +18,7 @@ h2{
     text-align: center;
 }
 p{   
-    text-align: center;
+    text-align: left;
 }
 
 #initial{
@@ -31,7 +31,7 @@ p{
 
 #explanation{
     position: absolute;
-    top: 75%; 
+    top: 76.5%; 
     left: 50%;
     width: 30%;
     margin-left: -15%;
@@ -42,8 +42,8 @@ p{
 }
 
 #logo{
-    position: absolute;
-    top: 20%;
+    position: relative;
+    top: -25%;
     left: 15%;
     width: 20%;
     height:auto;
@@ -57,4 +57,5 @@ p{
     border-style: solid;
     color: coral;
     padding: 10px 10px;
+    font-size: 100%
 }
