--- a/learnMore.css
+++ b/learnMore.css
@@ -8,7 +8,7 @@ body {
 
 h1{
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    font-size: 400%; 
+    font-size: 3.5vw; 
     color: coral;   
     text-align: center;
     
@@ -27,7 +27,8 @@ h4{
     position: absolute;
     margin-left: -5%;
     left: 20%;
-    top: -7.5%;
+    top: -15%;
+    font-size: 1vw;
 }
 
 .Ideology{
@@ -43,7 +44,7 @@ h4{
 
 .IdeologyDescription{
     text-align: left;
-    font-size: 100%%;
+    font-size: 0.9vw;
     color:coral; 
     width: 40%;
     height:10%;
